Http request test on JIRA

--- a/app/tsconfig.json
+++ b/app/tsconfig.json
@@ -1,11 +1,11 @@
 {
   "compilerOptions": {
-    "target": "ES6",
+    "target": "ESNext",
     "module": "ESNext",
     "moduleResolution": "Node",
     "esModuleInterop": true,
-    "lib": ["ES6"],
-    "outDir": "dist",
+    "lib": ["ESNext"],
+    "outDir": "appdist",
     "sourceMap": true
   },
   "include": [
