--- a/app/package.json
+++ b/app/package.json
@@ -1,18 +1,27 @@
 {
     "scripts": {
-        "start": "npm run build & electron .",
+        "start": "yarn build & electron .",
         "build": "tsc",
         "package": "electron-builder"
     },
     "devDependencies": {
         "electron": "^22.0.0",
-        "electron-builder": "^22.10.3",
+        "electron-builder": "^23.0.2",
         "typescript": "^4.9.3"
+    },
+    "build": {
+        "appId": "com.afoxer.jiralet",
+        "mac": {
+            "category": "com.afoxer"
+        }
     },
     "name": "jiralet",
     "version": "1.0.0",
-    "main": "dist/index.js",
+    "main": "appdist/index.js",
     "repository": "git@github.com:afoxer-com/JiraLet.git",
     "author": "sidney.wang <sidney.wang@foxmail.com>",
-    "license": "MIT"
+    "license": "MIT",
+    "dependencies": {
+        "@electron/remote": "^2.0.9"
+    }
 }
