--- a/web/package.json
+++ b/web/package.json
@@ -5,6 +5,9 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@electron/remote": "^2.0.9",
+        "antd": "^5.0.7",
+        "got": "^12.5.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0"
     },
