--- a/app/package.json
+++ b/app/package.json
@@ -22,6 +22,9 @@
     "author": "sidney.wang <sidney.wang@foxmail.com>",
     "license": "MIT",
     "dependencies": {
-        "@electron/remote": "^2.0.9"
+        "@electron/remote": "^2.0.9",
+        "electron-log": "^5.0.0-beta.6",
+        "electron-simple-updater": "^2.0.11",
+        "got": "^11.8.3"
     }
 }
